[project]
name = "market-bot"
version = "0.1.0"
description = ""
authors = [

]
readme = "README.md"
requires-python = "=3.13.3"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "alembic (>=1.16.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "market_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
