[project]
name = "market-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry",email = "Dimas23mail@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "market_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
